--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,48 @@ h1{
    /* margin-top: 19%;*/
 }
 
+.form_contato{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    gap: 5px;
+}
+
+form{
+    z-index: 2;
+    position: relative;
+    padding: 30px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    gap: 40px;
+    width: min(60vw, 400px);
+}
+
+form input, form textarea{
+    width: 100%;
+    box-shadow: 0px 4px 9.4px 0px rgba(0, 0, 0, 0.2509803922);
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    outline: none;
+}
+
+form input[type=submit] {
+    background-color: var(--cor_back_text);
+    width: min(50%, 130px);
+    cursor: pointer;
+    color: var(--cor_secundaria);
+    font-weight: 800;
+    text-align: center;
+    padding-left: 10px;
+    font-size: 20px;
+    border-radius: 5px;
+  }
+
+
 @media (max-width: 1000px){
     #main-content {
         min-width: 40px;
